[Task #20] Ajustar tema y colores

--- a/app/src/main/res/drawable-night/ic_launcher_background.xml
+++ b/app/src/main/res/drawable-night/ic_launcher_background.xml
@@ -14,12 +14,13 @@
                 android:endX="108"
                 android:type="linear">
                 <item
-                    android:color="#3B82F6"
+                    android:color="#1E3A8A"
                     android:offset="0.0" />
                 <item
-                    android:color="#1E40AF"
+                    android:color="#0F172A"
                     android:offset="1.0" />
             </gradient>
         </aapt:attr>
     </path>
 </vector>
+
